MoonX-Hub_Bash NFT Art ALGORAND | CHOICE

--- a/Choice_Lions_Bash/MoonX-Hub_Bash/views/index.ejs
+++ b/Choice_Lions_Bash/MoonX-Hub_Bash/views/index.ejs
@@ -7,13 +7,13 @@
     <title>Algorand | NFT</title>
 </head>
 <body>
-    <div>
+    <!-- <div>
         <h3>NFT</h3> 
         <h4>Algorand</h4>
     </div>
 
     <input type="text">
 
-    <button> Hello </button>
+    <button> Generate NFT Art </button> -->
 </body>
 </html>
