--- a/NFT_Engine/app.css
+++ b/NFT_Engine/app.css
@@ -56,15 +56,6 @@
 
 }
 
-#button3 {
-  background-color: purple;
-  padding: 10px;
-  width: 100px;
-  color:aliceblue;
-  border-radius: 10px;
-
-}
-
 #button4 {
   background-color: green;
   padding: 10px;
@@ -75,6 +66,14 @@
 }
 
 #connect {
+  background-color: purple;
+  padding: 10px;
+  color:aliceblue;
+  border-radius: 10px;
+
+}
+
+#image {
   background-color: purple;
   padding: 10px;
   color:aliceblue;
